--- a/CRUD-LPPA/bin/CRUD-LPPA.dll.config
+++ b/CRUD-LPPA/bin/CRUD-LPPA.dll.config
@@ -4,6 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="Index.aspx" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
