--- a/CRUD-LPPA/CRUD-LPPA.csproj
+++ b/CRUD-LPPA/CRUD-LPPA.csproj
@@ -142,7 +142,7 @@
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
-    <Content Include="Scripts\LPPA\ForTests.js" />
+    <Content Include="Scripts\LPPA\ForTest.js" />
     <Content Include="Scripts\LPPA\LoginScript.js" />
     <Content Include="Scripts\LPPA\main.js" />
     <Content Include="Scripts\LPPA\PrivilegesScript.js" />
